--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ authors = [
 dependencies = [
     "requests",
     'importlib-metadata; python_version<"3.10"',
+    'nextroute',
+    'nextmv',
 ]
 classifiers = [
     "Programming Language :: Python :: 3.10",
