--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ dependencies = [
     'importlib-metadata; python_version<"3.10"',
     'nextroute',
     'nextmv',
+    'pydantic>=2.10'
+    'pytest',
+    'pytest-mock',
+    'pytest-cov',
 ]
 classifiers = [
     "Programming Language :: Python :: 3.10",
