Add configurations class to generate feasible configurations
Signed-off-by: Aniket Mitra <aniket.mitra.partner@decathlon.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ name = "lmlib"
 version = "0.0.1"
 description = "Logistics Management Library for Maritime Industry"
 authors = [
-    {name = "computationelewetenschapsgroep", email = "aryant@computationelewetenschapsgroep.com"},
+    {name = "Aniket Mitra", email = "aniket@lionsville.nl"},
 ]
 dependencies = [
     "requests",
