--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,11 @@ name = "lmlib"
 version = "0.0.1"
 description = "Logistics Management Library for Maritime Industry"
 authors = [
-    {name = "Aniket Mitra", email = "aniket@lionsville.nl"},
+    {name = "Aniket Mitra", email = "amitra@lionsville.nl"},
 ]
 dependencies = [
     "requests",
     'importlib-metadata; python_version<"3.10"',
-    'nextroute',
-    'nextmv',
     'pydantic>=2.10',
     'pytest',
     'pytest-mock',
